--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
 <body>
     <div class="wrapper">
         <div class="mobile">
+            <div class="content">
+                <div class="title__auto">
+                    <h3>
+                        Войти в аккаунт
+                    </h3>
+                </div>
+                <form action="" class="form__container">
+                    <input placeholder="Телефон или адрес эл.почты">
+                    <input placeholder="Телефон или адрес эл.почты">
+                    <input placeholder="Телефон или адрес эл.почты">
 
+                </form>
+                <div class="btn-group">
+                    <a href="" class="create">
+                        Создать аккаунт
+                    </a>
+                    <button type="button" class="btn-primary">Далее</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
