--- a/index.html
+++ b/index.html
@@ -17,9 +17,21 @@
                     </h3>
                 </div>
                 <form action="" class="form__container">
-                    <input placeholder="Телефон или адрес эл.почты">
-                    <input placeholder="Телефон или адрес эл.почты">
-                    <input placeholder="Телефон или адрес эл.почты">
+
+                    <div class="text-field text-field_floating">
+                        <input class="text-field__input" type="text" id="name" placeholder="example@gmail.com">
+                        <label class="text-field__label" for="name">Имя</label>
+                    </div>
+
+                    <div class="text-field text-field_floating">
+                        <input class="text-field__input" type="email" id="email" placeholder="example@gmail.com">
+                        <label class="text-field__label" for="email">Email</label>
+                    </div>
+
+                    <div class="text-field text-field_floating">
+                        <input class="text-field__input" type="password" id="Password" placeholder="example@gmail.com">
+                        <label class="text-field__label" for="Password">Пароль</label>
+                    </div>
 
                 </form>
                 <div class="btn-group">
