fix form component

--- a/index.html
+++ b/index.html
@@ -16,30 +16,34 @@
                         Войти в аккаунт
                     </h3>
                 </div>
-                <form action="" class="form__container">
+                <form action="" class="form__auth">
 
-                    <div class="text-field text-field_floating">
-                        <input class="text-field__input" type="text" id="name" placeholder="example@gmail.com">
-                        <label class="text-field__label" for="name">Имя</label>
+                    <div class="form__container">
+                        <div class="text-field text-field_floating">
+                            <input class="text-field__input" type="text" id="name" placeholder="example@gmail.com">
+                            <label class="text-field__label" for="name">Имя</label>
+                        </div>
+    
+                        <div class="text-field text-field_floating">
+                            <input class="text-field__input" type="email" id="email" placeholder="example@gmail.com">
+                            <label class="text-field__label" for="email">Email</label>
+                        </div>
+    
+                        <div class="text-field text-field_floating">
+                            <input class="text-field__input" type="password" id="Password" placeholder="example@gmail.com">
+                            <label class="text-field__label" for="Password">Пароль</label>
+                        </div>
                     </div>
 
-                    <div class="text-field text-field_floating">
-                        <input class="text-field__input" type="email" id="email" placeholder="example@gmail.com">
-                        <label class="text-field__label" for="email">Email</label>
-                    </div>
-
-                    <div class="text-field text-field_floating">
-                        <input class="text-field__input" type="password" id="Password" placeholder="example@gmail.com">
-                        <label class="text-field__label" for="Password">Пароль</label>
+                    <div class="btn-group">
+                        <a href="" class="create">
+                            Создать аккаунт
+                        </a>
+                        <button type="button" class="btn-primary">Далее</button>
                     </div>
 
                 </form>
-                <div class="btn-group">
-                    <a href="" class="create">
-                        Создать аккаунт
-                    </a>
-                    <button type="button" class="btn-primary">Далее</button>
-                </div>
+
             </div>
         </div>
     </div>
